Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.9.0-beta1
-
None
-
macOS 10.14.3
Qt Creator 4.9.0-beta1 and 4.9.0-beta2
-
-
7c69460702b7fd7c15662c7088a6d395a773640f (qt-creator/qt-creator/4.9)
Description
I have a project that opens successfully in Qt Creator 4.8.1, but in 4.9.0-beta1 and 4.9.0-beta2, Qt Creator consistently crashes while opening it.
Steps to reproduce:
- Delete ~/.config/QtProject
- git clone https://github.com/vuo/vuo.git
- Open vuo.pro in Qt Creator 4.9.0-beta1 or 4.9.0-beta2, and configure the project
- Wait a few seconds, and Qt Creator crashes
Crash report attached.
Attachments
For Gerrit Dashboard: QTCREATORBUG-22124 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
255786,2 | Qmake: Switch back to old way of collecting deployment info | 4.9 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |